<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2019 Nicola Serlonghi <nicolaserlonghi@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.MainActivity">
    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/bottom_sheet_top_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_heigth"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title">

            <ImageView
                android:id="@+id/icon_title"
                android:layout_width="@dimen/bottom_sheet_image_title_dimension"
                android:layout_height="@dimen/bottom_sheet_image_title_dimension"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:id="@+id/title_navigation_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon_title"
                android:textColor="@color/accent"
                android:textSize="@dimen/bottom_sheet_title_size"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/app_name" />

        </RelativeLayout>

        <include layout="@layout/horizontal_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_heigth"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title" >

            <ImageView
                android:id="@+id/icon_import_selected"
                android:layout_width="@dimen/bottom_sheet_image_dimension"
                android:layout_height="@dimen/bottom_sheet_image_dimension"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@drawable/ic_archive" />

            <TextView
                android:id="@+id/import_selected_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon_import_selected"
                android:textColor="@color/primary_text"
                android:text="@string/menu_import_selected_apps" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_heigth"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title" >

            <ImageView
                android:id="@+id/icon_export_selected"
                android:layout_width="@dimen/bottom_sheet_image_dimension"
                android:layout_height="@dimen/bottom_sheet_image_dimension"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@drawable/ic_unarchive" />

            <TextView
                android:id="@+id/export_selected_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon_export_selected"
                android:textColor="@color/primary_text"
                android:text="@string/menu_export_selected_apps" />
        </RelativeLayout>

        <include layout="@layout/horizontal_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_heigth"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title" >

            <ImageView
                android:id="@+id/icon_feedback"
                android:layout_width="@dimen/bottom_sheet_image_dimension"
                android:layout_height="@dimen/bottom_sheet_image_dimension"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@drawable/ic_feedback" />

            <TextView
                android:id="@+id/leave_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon_feedback"
                android:textColor="@color/primary_text"
                android:text="@string/menu_feedback" />
        </RelativeLayout>

        <include layout="@layout/horizontal_separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_heigth"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title" >

            <ImageView
                android:id="@+id/icon_info_developer"
                android:layout_width="@dimen/bottom_sheet_image_dimension"
                android:layout_height="@dimen/bottom_sheet_image_dimension"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/info_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon_info_developer"
                android:textColor="@color/primary_text"
                android:text="@string/menu_info_developer" />
        </RelativeLayout>

        <include layout="@layout/horizontal_separator" />

        <TextView
            android:id="@+id/application_version"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="bottom"
            android:layout_gravity="center"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/footer_text_dimension" />
    </LinearLayout>
</layout>